--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -2,7 +2,6 @@
 <head>
   <title>Weather</title>
   <link rel="icon" href="/img/weather-icon.png">
-  <script src="/js/app.js"></script>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 
@@ -12,9 +11,19 @@
     <p>
       Use this site to get your weather!
     </p>
+    <form>
+      <input placeholder="Location">
+      <button>
+        Search
+      </button>
+    </form>
+
+    <p id='message-1'></p>
+    <p id='message-2'></p>
   </div>
   
   {{>footer}}
+  <script src="/js/app.js"></script>
 </body>
 
 </html>
